// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`help should generate help for the program 1`] = `
"Usage: padrone-test [command]

Commands:
  current          
  forecast         
  alerts           
  compare          
  noop             
  cities           
  deprecated-test  
  hidden-test      
  examples-test    

Run "padrone-test [command] --help" for more information on a command.
"
`;

exports[`help should generate help for the top level command 1`] = `
"Usage: padrone-test [command]

Commands:
  current          
  forecast         
  alerts           
  compare          
  noop             
  cities           
  deprecated-test  
  hidden-test      
  examples-test    

Run "padrone-test [command] --help" for more information on a command.
"
`;

exports[`help should generate help for a command 1`] = `
"Usage: padrone-test current [args...] [options]

Arguments:
  city
    City name

Options:
  --unit <string> (optional) (default: fahrenheit) (choices: celsius, fahrenheit)     Temperature unit
  --[no-]verbose <boolean> (optional)  Show detailed information
"
`;

exports[`help should generate help for a command with enabled colors 1`] = `
"Usage: \x1B[36m\x1B[1mpadrone-test current\x1B[0m \x1B[90m[args...]\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mArguments:\x1B[0m
  \x1B[32mcity\x1B[0m
    \x1B[2mCity name\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--unit\x1B[0m \x1B[33m<string>\x1B[0m \x1B[90m(optional)\x1B[0m \x1B[90m(default: fahrenheit)\x1B[0m \x1B[90m(choices: celsius, fahrenheit)\x1B[0m     \x1B[2mTemperature unit\x1B[0m
  \x1B[32m--[no-]verbose\x1B[0m \x1B[33m<boolean>\x1B[0m \x1B[90m(optional)\x1B[0m  \x1B[2mShow detailed information\x1B[0m
"
`;

exports[`help should generate help for a command with nested commands 1`] = `
"Usage: padrone-test forecast extended [command] [args...] [options]

Commands:
  extended  

Run "forecast extended [command] --help" for more information on a command.

Arguments:
  city
    City name (overrides positional argument)

Options:
  --unit <string> (optional) (default: fahrenheit) (choices: celsius, fahrenheit)  Temperature unit
"
`;

exports[`help should generate help for a command with meta object 1`] = `
"Usage: padrone-test cities [options]

Options:
  --[no-]verbose, -v <boolean> (optional)  Show detailed information
"
`;

exports[`help should generate help for a command with deprecated options 1`] = `
"Usage: padrone-test deprecated-test [options]

Options:
  --oldOption <string> (deprecated)              This option is deprecated
  --newOption <string> (optional)              This is the new option
  --[no-]deprecatedWithMessage <boolean> (deprecated: Use newOption instead)  This option is deprecated with a message
"
`;

exports[`help should generate help for a command with deprecated options and colors 1`] = `
"Usage: \x1B[36m\x1B[1mpadrone-test deprecated-test\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[9m\x1B[90m--oldOption\x1B[0m \x1B[33m<string>\x1B[0m \x1B[90m(deprecated)\x1B[0m              \x1B[2mThis option is deprecated\x1B[0m
  \x1B[32m--newOption\x1B[0m \x1B[33m<string>\x1B[0m \x1B[90m(optional)\x1B[0m              \x1B[2mThis is the new option\x1B[0m
  \x1B[9m\x1B[90m--[no-]deprecatedWithMessage\x1B[0m \x1B[33m<boolean>\x1B[0m \x1B[90m(deprecated: Use newOption instead)\x1B[0m  \x1B[2mThis option is deprecated with a message\x1B[0m
"
`;

exports[`help should generate help for a command with hidden options 1`] = `
"Usage: padrone-test hidden-test [options]

Options:
  --visibleOption <string> (optional)   This option is visible in help
  --[no-]anotherVisible <boolean> (optional)  This option is also visible
"
`;

exports[`help should generate help for a command with hidden options and colors 1`] = `
"Usage: \x1B[36m\x1B[1mpadrone-test hidden-test\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--visibleOption\x1B[0m \x1B[33m<string>\x1B[0m \x1B[90m(optional)\x1B[0m   \x1B[2mThis option is visible in help\x1B[0m
  \x1B[32m--[no-]anotherVisible\x1B[0m \x1B[33m<boolean>\x1B[0m \x1B[90m(optional)\x1B[0m  \x1B[2mThis option is also visible\x1B[0m
"
`;

exports[`help should generate help for a command with examples 1`] = `
"Usage: padrone-test examples-test [options]

Options:
  --output <string> (optional)   Specify the output file path
      Example: output.txt, ./dist/result.json
  --format <string> (optional) (choices: json, yaml, xml)   Choose the output format
      Example: json, yaml
  --[no-]verbose <boolean> (optional)  Show detailed information
      Example: true
  --config <string> (optional)   Path to configuration file
      Example: ./config.json, ~/.config/app.json
"
`;

exports[`help should generate help for a command with examples and colors 1`] = `
"Usage: \x1B[36m\x1B[1mpadrone-test examples-test\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--output\x1B[0m \x1B[33m<string>\x1B[0m \x1B[90m(optional)\x1B[0m   \x1B[2mSpecify the output file path\x1B[0m
      \x1B[4mExample:\x1B[0m \x1B[3moutput.txt, ./dist/result.json\x1B[0m
  \x1B[32m--format\x1B[0m \x1B[33m<string>\x1B[0m \x1B[90m(optional)\x1B[0m \x1B[90m(choices: json, yaml, xml)\x1B[0m   \x1B[2mChoose the output format\x1B[0m
      \x1B[4mExample:\x1B[0m \x1B[3mjson, yaml\x1B[0m
  \x1B[32m--[no-]verbose\x1B[0m \x1B[33m<boolean>\x1B[0m \x1B[90m(optional)\x1B[0m  \x1B[2mShow detailed information\x1B[0m
      \x1B[4mExample:\x1B[0m \x1B[3mtrue\x1B[0m
  \x1B[32m--config\x1B[0m \x1B[33m<string>\x1B[0m \x1B[90m(optional)\x1B[0m   \x1B[2mPath to configuration file\x1B[0m
      \x1B[4mExample:\x1B[0m \x1B[3m./config.json, ~/.config/app.json\x1B[0m
"
`;

exports[`help should generate help in console format 1`] = `
"Usage: \x1B[36m\x1B[1mpadrone-test current\x1B[0m \x1B[90m[args...]\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mArguments:\x1B[0m
  \x1B[32mcity\x1B[0m
    \x1B[2mCity name\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--unit\x1B[0m \x1B[33m<string>\x1B[0m \x1B[90m(optional)\x1B[0m \x1B[90m(default: fahrenheit)\x1B[0m \x1B[90m(choices: celsius, fahrenheit)\x1B[0m     \x1B[2mTemperature unit\x1B[0m
  \x1B[32m--[no-]verbose\x1B[0m \x1B[33m<boolean>\x1B[0m \x1B[90m(optional)\x1B[0m  \x1B[2mShow detailed information\x1B[0m
"
`;

exports[`help should generate help in markdown format 1`] = `
"Usage: **padrone-test current** *[args...]* *[options]*



### Arguments:

  \`city\`

    City name



### Options:

  \`--unit\` \`<string>\` *(optional)* *(default: fahrenheit)* *(choices: celsius, fahrenheit)*     Temperature unit

  \`--[no-]verbose\` \`<boolean>\` *(optional)*  Show detailed information

"
`;

exports[`help should generate help in html format 1`] = `"<div style="font-family: monospace; line-height: 1.6;"><strong>Usage:</strong> <strong style="color: #00bcd4;">padrone-test current</strong> <span style="color: #999;">[args...]</span> <span style="color: #999;">[options]</span><br><br><h3>Arguments:</h3><br>&nbsp;&nbsp;<code style="color: #4caf50;">city</code><br>&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #666;">City name</span><br><br><h3>Options:</h3><br>&nbsp;&nbsp;<code style="color: #4caf50;">--unit</code> <code style="color: #ff9800;">&lt;string&gt;</code> <span style="color: #999;">(optional)</span> <span style="color: #999;">(default: fahrenheit)</span> <span style="color: #999;">(choices: celsius, fahrenheit)</span>     <span style="color: #666;">Temperature unit</span><br>&nbsp;&nbsp;<code style="color: #4caf50;">--[no-]verbose</code> <code style="color: #ff9800;">&lt;boolean&gt;</code> <span style="color: #999;">(optional)</span>  <span style="color: #666;">Show detailed information</span><br></div>"`;

exports[`help should generate help in json format 1`] = `
"{
  "name": "current",
  "usage": {
    "command": "padrone-test current",
    "hasSubcommands": false,
    "hasArguments": true,
    "hasOptions": true
  },
  "arguments": [
    {
      "name": "city",
      "description": "City name",
      "optional": false,
      "type": "string"
    }
  ],
  "options": [
    {
      "name": "unit",
      "description": "Temperature unit",
      "optional": true,
      "default": "fahrenheit",
      "type": "string",
      "enum": [
        "celsius",
        "fahrenheit"
      ],
      "variadic": false,
      "negatable": false
    },
    {
      "name": "verbose",
      "description": "Show detailed information",
      "optional": true,
      "type": "boolean",
      "variadic": false,
      "negatable": true
    }
  ]
}"
`;

exports[`help with full detail mode should generate full help with all nested commands in text format 1`] = `
"Usage: padrone-test [command]

Commands:
  current          
  forecast         
  alerts           
  compare          
  noop             
  cities           
  deprecated-test  
  hidden-test      
  examples-test    

Run "padrone-test [command] --help" for more information on a command.

Subcommand Details:

────────────────────────────────────────────────────────────
Usage: padrone-test current [args...] [options]

Arguments:
  city
    City name

Options:
  --unit <string> (optional) (default: fahrenheit) (choices: celsius, fahrenheit)     Temperature unit
  --[no-]verbose <boolean> (optional)  Show detailed information

────────────────────────────────────────────────────────────
Usage: padrone-test forecast [command] [args...] [options]

Commands:
  extended  

Run "forecast [command] --help" for more information on a command.

Arguments:
  city
    City name (overrides positional argument)

Options:
  --days <number> (optional) (default: 3)  Number of days to forecast
  --unit <string> (optional) (default: fahrenheit) (choices: celsius, fahrenheit)  Temperature unit

Subcommand Details:

────────────────────────────────────────────────────────────
Usage: padrone-test forecast extended [command] [args...] [options]

Commands:
  extended  

Run "forecast extended [command] --help" for more information on a command.

Arguments:
  city
    City name (overrides positional argument)

Options:
  --unit <string> (optional) (default: fahrenheit) (choices: celsius, fahrenheit)  Temperature unit

Subcommand Details:

────────────────────────────────────────────────────────────
Usage: padrone-test forecast extended extended [args...] [options]

Arguments:
  city
    City name (overrides positional argument)

────────────────────────────────────────────────────────────
Usage: padrone-test alerts [options]

Options:
  --region <string> (optional)     Region to check alerts for
  --severity <string> (optional) (choices: low, medium, high)   Filter by severity
  --[no-]ascending <boolean> (optional)  Sort alerts in ascending order

────────────────────────────────────────────────────────────
Usage: padrone-test compare [args...] [options]

Arguments:
  ...cities
    Cities to compare

────────────────────────────────────────────────────────────
Usage: padrone-test noop

────────────────────────────────────────────────────────────
Usage: padrone-test cities [options]

Options:
  --[no-]verbose, -v <boolean> (optional)  Show detailed information

────────────────────────────────────────────────────────────
Usage: padrone-test deprecated-test [options]

Options:
  --oldOption <string> (deprecated)              This option is deprecated
  --newOption <string> (optional)              This is the new option
  --[no-]deprecatedWithMessage <boolean> (deprecated: Use newOption instead)  This option is deprecated with a message

────────────────────────────────────────────────────────────
Usage: padrone-test hidden-test [options]

Options:
  --visibleOption <string> (optional)   This option is visible in help
  --[no-]anotherVisible <boolean> (optional)  This option is also visible

────────────────────────────────────────────────────────────
Usage: padrone-test examples-test [options]

Options:
  --output <string> (optional)   Specify the output file path
      Example: output.txt, ./dist/result.json
  --format <string> (optional) (choices: json, yaml, xml)   Choose the output format
      Example: json, yaml
  --[no-]verbose <boolean> (optional)  Show detailed information
      Example: true
  --config <string> (optional)   Path to configuration file
      Example: ./config.json, ~/.config/app.json
"
`;

exports[`help with full detail mode should generate full help with all nested commands in json format 1`] = `
"{
  "name": "padrone-test",
  "usage": {
    "command": "padrone-test",
    "hasSubcommands": true,
    "hasArguments": false,
    "hasOptions": false
  },
  "subcommands": [
    {
      "name": "current"
    },
    {
      "name": "forecast"
    },
    {
      "name": "alerts"
    },
    {
      "name": "compare"
    },
    {
      "name": "noop"
    },
    {
      "name": "cities"
    },
    {
      "name": "deprecated-test"
    },
    {
      "name": "hidden-test"
    },
    {
      "name": "examples-test"
    }
  ],
  "nestedCommands": [
    {
      "name": "current",
      "usage": {
        "command": "padrone-test current",
        "hasSubcommands": false,
        "hasArguments": true,
        "hasOptions": true
      },
      "arguments": [
        {
          "name": "city",
          "description": "City name",
          "optional": false,
          "type": "string"
        }
      ],
      "options": [
        {
          "name": "unit",
          "description": "Temperature unit",
          "optional": true,
          "default": "fahrenheit",
          "type": "string",
          "enum": [
            "celsius",
            "fahrenheit"
          ],
          "variadic": false,
          "negatable": false
        },
        {
          "name": "verbose",
          "description": "Show detailed information",
          "optional": true,
          "type": "boolean",
          "variadic": false,
          "negatable": true
        }
      ]
    },
    {
      "name": "forecast",
      "usage": {
        "command": "padrone-test forecast",
        "hasSubcommands": true,
        "hasArguments": true,
        "hasOptions": true
      },
      "subcommands": [
        {
          "name": "extended"
        }
      ],
      "nestedCommands": [
        {
          "name": "forecast extended",
          "usage": {
            "command": "padrone-test forecast extended",
            "hasSubcommands": true,
            "hasArguments": true,
            "hasOptions": true
          },
          "subcommands": [
            {
              "name": "extended"
            }
          ],
          "nestedCommands": [
            {
              "name": "forecast extended extended",
              "usage": {
                "command": "padrone-test forecast extended extended",
                "hasSubcommands": false,
                "hasArguments": true,
                "hasOptions": true
              },
              "arguments": [
                {
                  "name": "city",
                  "description": "City name (overrides positional argument)",
                  "optional": false,
                  "type": "string"
                }
              ]
            }
          ],
          "arguments": [
            {
              "name": "city",
              "description": "City name (overrides positional argument)",
              "optional": false,
              "type": "string"
            }
          ],
          "options": [
            {
              "name": "unit",
              "description": "Temperature unit",
              "optional": true,
              "default": "fahrenheit",
              "type": "string",
              "enum": [
                "celsius",
                "fahrenheit"
              ],
              "variadic": false,
              "negatable": false
            }
          ]
        }
      ],
      "arguments": [
        {
          "name": "city",
          "description": "City name (overrides positional argument)",
          "optional": false,
          "type": "string"
        }
      ],
      "options": [
        {
          "name": "days",
          "description": "Number of days to forecast",
          "optional": true,
          "default": 3,
          "type": "number",
          "variadic": false,
          "negatable": false
        },
        {
          "name": "unit",
          "description": "Temperature unit",
          "optional": true,
          "default": "fahrenheit",
          "type": "string",
          "enum": [
            "celsius",
            "fahrenheit"
          ],
          "variadic": false,
          "negatable": false
        }
      ]
    },
    {
      "name": "alerts",
      "usage": {
        "command": "padrone-test alerts",
        "hasSubcommands": false,
        "hasArguments": false,
        "hasOptions": true
      },
      "options": [
        {
          "name": "region",
          "description": "Region to check alerts for",
          "optional": true,
          "type": "string",
          "variadic": false,
          "negatable": false
        },
        {
          "name": "severity",
          "description": "Filter by severity",
          "optional": true,
          "type": "string",
          "enum": [
            "low",
            "medium",
            "high"
          ],
          "variadic": false,
          "negatable": false
        },
        {
          "name": "ascending",
          "description": "Sort alerts in ascending order",
          "optional": true,
          "type": "boolean",
          "variadic": false,
          "negatable": true
        }
      ]
    },
    {
      "name": "compare",
      "usage": {
        "command": "padrone-test compare",
        "hasSubcommands": false,
        "hasArguments": true,
        "hasOptions": true
      },
      "arguments": [
        {
          "name": "...cities",
          "description": "Cities to compare",
          "optional": false,
          "type": "array<string>"
        }
      ]
    },
    {
      "name": "noop",
      "usage": {
        "command": "padrone-test noop",
        "hasSubcommands": false,
        "hasArguments": false,
        "hasOptions": false
      }
    },
    {
      "name": "cities",
      "usage": {
        "command": "padrone-test cities",
        "hasSubcommands": false,
        "hasArguments": false,
        "hasOptions": true
      },
      "options": [
        {
          "name": "verbose",
          "description": "Show detailed information",
          "optional": true,
          "type": "boolean",
          "variadic": false,
          "negatable": true,
          "aliases": [
            "v"
          ]
        }
      ]
    },
    {
      "name": "deprecated-test",
      "usage": {
        "command": "padrone-test deprecated-test",
        "hasSubcommands": false,
        "hasArguments": false,
        "hasOptions": true
      },
      "options": [
        {
          "name": "oldOption",
          "description": "This option is deprecated",
          "optional": true,
          "type": "string",
          "deprecated": true,
          "variadic": false,
          "negatable": false
        },
        {
          "name": "newOption",
          "description": "This is the new option",
          "optional": true,
          "type": "string",
          "variadic": false,
          "negatable": false
        },
        {
          "name": "deprecatedWithMessage",
          "description": "This option is deprecated with a message",
          "optional": true,
          "type": "boolean",
          "deprecated": "Use newOption instead",
          "variadic": false,
          "negatable": true
        }
      ]
    },
    {
      "name": "hidden-test",
      "usage": {
        "command": "padrone-test hidden-test",
        "hasSubcommands": false,
        "hasArguments": false,
        "hasOptions": true
      },
      "options": [
        {
          "name": "visibleOption",
          "description": "This option is visible in help",
          "optional": true,
          "type": "string",
          "variadic": false,
          "negatable": false
        },
        {
          "name": "anotherVisible",
          "description": "This option is also visible",
          "optional": true,
          "type": "boolean",
          "variadic": false,
          "negatable": true
        }
      ]
    },
    {
      "name": "examples-test",
      "usage": {
        "command": "padrone-test examples-test",
        "hasSubcommands": false,
        "hasArguments": false,
        "hasOptions": true
      },
      "options": [
        {
          "name": "output",
          "description": "Specify the output file path",
          "optional": true,
          "type": "string",
          "examples": [
            "output.txt",
            "./dist/result.json"
          ],
          "variadic": false,
          "negatable": false
        },
        {
          "name": "format",
          "description": "Choose the output format",
          "optional": true,
          "type": "string",
          "enum": [
            "json",
            "yaml",
            "xml"
          ],
          "examples": [
            "json",
            "yaml"
          ],
          "variadic": false,
          "negatable": false
        },
        {
          "name": "verbose",
          "description": "Show detailed information",
          "optional": true,
          "type": "boolean",
          "examples": [
            true
          ],
          "variadic": false,
          "negatable": true
        },
        {
          "name": "config",
          "description": "Path to configuration file",
          "optional": true,
          "type": "string",
          "examples": [
            "./config.json",
            "~/.config/app.json"
          ],
          "variadic": false,
          "negatable": false
        }
      ]
    }
  ]
}"
`;

exports[`help with full detail mode should generate full help with all nested commands in markdown format 1`] = `
"Usage: **padrone-test** *[command]*



### Commands:

  **current**          

  **forecast**         

  **alerts**           

  **compare**          

  **noop**             

  **cities**           

  **deprecated-test**  

  **hidden-test**      

  **examples-test**    



*Run "padrone-test [command] --help" for more information on a command.*



### Subcommand Details:



*────────────────────────────────────────────────────────────*

Usage: **padrone-test current** *[args...]* *[options]*



### Arguments:

  \`city\`

    City name



### Options:

  \`--unit\` \`<string>\` *(optional)* *(default: fahrenheit)* *(choices: celsius, fahrenheit)*     Temperature unit

  \`--[no-]verbose\` \`<boolean>\` *(optional)*  Show detailed information



*────────────────────────────────────────────────────────────*

Usage: **padrone-test forecast** *[command]* *[args...]* *[options]*



### Commands:

  **extended**  



*Run "forecast [command] --help" for more information on a command.*



### Arguments:

  \`city\`

    City name (overrides positional argument)



### Options:

  \`--days\` \`<number>\` *(optional)* *(default: 3)*  Number of days to forecast

  \`--unit\` \`<string>\` *(optional)* *(default: fahrenheit)* *(choices: celsius, fahrenheit)*  Temperature unit



### Subcommand Details:



*────────────────────────────────────────────────────────────*

Usage: **padrone-test forecast extended** *[command]* *[args...]* *[options]*



### Commands:

  **extended**  



*Run "forecast extended [command] --help" for more information on a command.*



### Arguments:

  \`city\`

    City name (overrides positional argument)



### Options:

  \`--unit\` \`<string>\` *(optional)* *(default: fahrenheit)* *(choices: celsius, fahrenheit)*  Temperature unit



### Subcommand Details:



*────────────────────────────────────────────────────────────*

Usage: **padrone-test forecast extended extended** *[args...]* *[options]*



### Arguments:

  \`city\`

    City name (overrides positional argument)



*────────────────────────────────────────────────────────────*

Usage: **padrone-test alerts** *[options]*



### Options:

  \`--region\` \`<string>\` *(optional)*     Region to check alerts for

  \`--severity\` \`<string>\` *(optional)* *(choices: low, medium, high)*   Filter by severity

  \`--[no-]ascending\` \`<boolean>\` *(optional)*  Sort alerts in ascending order



*────────────────────────────────────────────────────────────*

Usage: **padrone-test compare** *[args...]* *[options]*



### Arguments:

  \`...cities\`

    Cities to compare



*────────────────────────────────────────────────────────────*

Usage: **padrone-test noop**



*────────────────────────────────────────────────────────────*

Usage: **padrone-test cities** *[options]*



### Options:

  \`--[no-]verbose, -v\` \`<boolean>\` *(optional)*  Show detailed information



*────────────────────────────────────────────────────────────*

Usage: **padrone-test deprecated-test** *[options]*



### Options:

  ~~--oldOption~~ \`<string>\` *(deprecated)*              This option is deprecated

  \`--newOption\` \`<string>\` *(optional)*              This is the new option

  ~~--[no-]deprecatedWithMessage~~ \`<boolean>\` *(deprecated: Use newOption instead)*  This option is deprecated with a message



*────────────────────────────────────────────────────────────*

Usage: **padrone-test hidden-test** *[options]*



### Options:

  \`--visibleOption\` \`<string>\` *(optional)*   This option is visible in help

  \`--[no-]anotherVisible\` \`<boolean>\` *(optional)*  This option is also visible



*────────────────────────────────────────────────────────────*

Usage: **padrone-test examples-test** *[options]*



### Options:

  \`--output\` \`<string>\` *(optional)*   Specify the output file path

    **Example:** \`output.txt, ./dist/result.json\`

  \`--format\` \`<string>\` *(optional)* *(choices: json, yaml, xml)*   Choose the output format

    **Example:** \`json, yaml\`

  \`--[no-]verbose\` \`<boolean>\` *(optional)*  Show detailed information

    **Example:** \`true\`

  \`--config\` \`<string>\` *(optional)*   Path to configuration file

    **Example:** \`./config.json, ~/.config/app.json\`

"
`;

exports[`help with full detail mode should generate full help for a specific command with subcommands 1`] = `
"Usage: padrone-test forecast [command] [args...] [options]

Commands:
  extended  

Run "forecast [command] --help" for more information on a command.

Arguments:
  city
    City name (overrides positional argument)

Options:
  --days <number> (optional) (default: 3)  Number of days to forecast
  --unit <string> (optional) (default: fahrenheit) (choices: celsius, fahrenheit)  Temperature unit

Subcommand Details:

────────────────────────────────────────────────────────────
Usage: padrone-test forecast extended [command] [args...] [options]

Commands:
  extended  

Run "forecast extended [command] --help" for more information on a command.

Arguments:
  city
    City name (overrides positional argument)

Options:
  --unit <string> (optional) (default: fahrenheit) (choices: celsius, fahrenheit)  Temperature unit

Subcommand Details:

────────────────────────────────────────────────────────────
Usage: padrone-test forecast extended extended [args...] [options]

Arguments:
  city
    City name (overrides positional argument)
"
`;

exports[`help with full detail mode should generate full help for deeply nested commands 1`] = `
"Usage: padrone-test forecast extended [command] [args...] [options]

Commands:
  extended  

Run "forecast extended [command] --help" for more information on a command.

Arguments:
  city
    City name (overrides positional argument)

Options:
  --unit <string> (optional) (default: fahrenheit) (choices: celsius, fahrenheit)  Temperature unit

Subcommand Details:

────────────────────────────────────────────────────────────
Usage: padrone-test forecast extended extended [args...] [options]

Arguments:
  city
    City name (overrides positional argument)
"
`;

exports[`help with full detail mode should work with ansi format in full detail mode 1`] = `
"Usage: \x1B[36m\x1B[1mpadrone-test forecast\x1B[0m \x1B[90m[command]\x1B[0m \x1B[90m[args...]\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mCommands:\x1B[0m
  \x1B[36m\x1B[1mextended\x1B[0m  

\x1B[90mRun "forecast [command] --help" for more information on a command.\x1B[0m

\x1B[1mArguments:\x1B[0m
  \x1B[32mcity\x1B[0m
    \x1B[2mCity name (overrides positional argument)\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--days\x1B[0m \x1B[33m<number>\x1B[0m \x1B[90m(optional)\x1B[0m \x1B[90m(default: 3)\x1B[0m  \x1B[2mNumber of days to forecast\x1B[0m
  \x1B[32m--unit\x1B[0m \x1B[33m<string>\x1B[0m \x1B[90m(optional)\x1B[0m \x1B[90m(default: fahrenheit)\x1B[0m \x1B[90m(choices: celsius, fahrenheit)\x1B[0m  \x1B[2mTemperature unit\x1B[0m

\x1B[1mSubcommand Details:\x1B[0m

\x1B[90m────────────────────────────────────────────────────────────\x1B[0m
Usage: \x1B[36m\x1B[1mpadrone-test forecast extended\x1B[0m \x1B[90m[command]\x1B[0m \x1B[90m[args...]\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mCommands:\x1B[0m
  \x1B[36m\x1B[1mextended\x1B[0m  

\x1B[90mRun "forecast extended [command] --help" for more information on a command.\x1B[0m

\x1B[1mArguments:\x1B[0m
  \x1B[32mcity\x1B[0m
    \x1B[2mCity name (overrides positional argument)\x1B[0m

\x1B[1mOptions:\x1B[0m
  \x1B[32m--unit\x1B[0m \x1B[33m<string>\x1B[0m \x1B[90m(optional)\x1B[0m \x1B[90m(default: fahrenheit)\x1B[0m \x1B[90m(choices: celsius, fahrenheit)\x1B[0m  \x1B[2mTemperature unit\x1B[0m

\x1B[1mSubcommand Details:\x1B[0m

\x1B[90m────────────────────────────────────────────────────────────\x1B[0m
Usage: \x1B[36m\x1B[1mpadrone-test forecast extended extended\x1B[0m \x1B[90m[args...]\x1B[0m \x1B[90m[options]\x1B[0m

\x1B[1mArguments:\x1B[0m
  \x1B[32mcity\x1B[0m
    \x1B[2mCity name (overrides positional argument)\x1B[0m
"
`;
